# ss-pathfinder

./: Cargo.toml
canvas/: Cargo.toml
canvas/src/: lib.rs  tests.rs  text.rs
color/: Cargo.toml
color/src/: lib.rs  matrix.rs
content/: Cargo.toml
content/src/: clip.rs  dash.rs  dilation.rs  effects.rs  fill.rs  gradient.rs  lib.rs  outline.rs  pattern.rs  segment.rs  stroke.rs  transform.rs  util.rs
cross-build-bot/: Cargo.toml
export/: Cargo.toml
export/src/: lib.rs  pdf.rs
geometry/: Cargo.toml
geometry/src/: lib.rs  line_segment.rs  rect.rs  transform2d.rs  transform3d.rs  unit_vector.rs  vector.rs
gpu/: Cargo.toml
gpu/src/: allocator.rs  lib.rs
metal_backend/: Cargo.toml
metal_backend/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: allocator.rs  builder.rs  gpu_data.rs  lib.rs  options.rs  paint.rs  scene.rs  tile_map.rs  tiler.rs  tiles.rs
renderer/src/concurrent/: executor.rs  rayon.rs  scene_proxy.rs
renderer/src/gpu/: blend.rs  debug.rs  mod.rs  options.rs  perf.rs  renderer.rs  shaders.rs
renderer/src/gpu/d3d11/: mod.rs  renderer.rs  shaders.rs
renderer/src/gpu/d3d9/: mod.rs  renderer.rs  shaders.rs
resources/: Cargo.toml  build.rs
resources/src/: embedded.rs  lib.rs
simd/: Cargo.toml
simd/src/: extras.rs  lib.rs  test.rs
simd/src/arm/: mod.rs
simd/src/scalar/: mod.rs
simd/src/x86/: mod.rs  swizzle_i32x4.rs
ui/: Cargo.toml
ui/src/: lib.rs
vectorizer/: Cargo.toml
vectorizer/src/: lib.rs
vectorizer/src/data/: basics.rs
vectorizer/src/renderers/: backend_context.rs  dynamic_core.rs  layer.rs  mod.rs  scene.rs  static_core.rs
vectorizer_c_api/: Cargo.toml  cbindgen.toml
vectorizer_c_api/c-ffi/include/: vectorizer-c-api.h
vectorizer_c_api/scripts/: build-c-interface.sh  clean.sh  install-deps.sh
vectorizer_c_api/src/: lib.rs
