[workspace]
members = [
    "canvas",
    "color",
    "content",
    "geometry",
    "gpu",
    "metal_backend",
    "renderer",
    "resources",
    "simd",
    "ui",
    "export",
    "vectorizer",
    "vectorizer_c_api",
]

default-members = [
    "canvas",
    "color",
    "content",
    "geometry",
    "gpu",
    "metal_backend",
    "renderer",
    "resources",
    "simd",
    "ui",
    "export",
    "vectorizer",
    "vectorizer_c_api",
]

exclude = [ "cross-build-bot" ]

# [patch.crates-io]
# pathfinder_geometry = { path = "geometry" }
# pathfinder_simd = { path = "simd" }

# pathfinder_geometry = { path = "geometry" }
# pathfinder_simd = { path = "simd" }

# [patch."https://github.com/servo/pathfinder"]
# pathfinder_geometry = { path = "geometry" }
# pathfinder_content = { path = "content" }
# pathfinder_color = { path = "color" }
# pathfinder_renderer = { path = "renderer" }
# pathfinder_simd = { path = "simd" }

# pathfinder_geometry = { path = "geometry" }
# pathfinder_content = { path = "content" }
# pathfinder_color = { path = "color" }
# pathfinder_renderer = { path = "renderer" }
# pathfinder_simd = { path = "simd" }

