[package]
name = "ss_pathfinder_metal"
version = "0.5.1"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "A simple cross-platform GPU abstraction library: Metal backend"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/pathfinder"
homepage = "https://github.com/servo/pathfinder"

[dependencies]
bitflags = "1.0"
byteorder = "1.3"
block = "0.1"
cocoa = "0.19"
core-foundation = "0.6"
dispatch = "0.2"
foreign-types = "0.3"
half = "1.5"
io-surface = "0.12"
libc = "0.2"
objc = {version = "0.2", features = ['objc_exception', 'exception']}
objc_exception = "0.1.2"


# metal = "0.18"
metal = "0.19"

[dependencies.ss_pathfinder_geometry]
path = "../geometry"
version = "0.5"

[dependencies.ss_pathfinder_gpu]
path = "../gpu"
version = "0.5"

[dependencies.ss_pathfinder_resources]
path = "../resources"
version = "0.5"

[dependencies.ss_pathfinder_simd]
path = "../simd"
version = "0.5"
