[package]
name = "ss_pathfinder_renderer"
version = "0.5.0"
edition = "2018"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "A GPU-accelerated vector graphics and font renderer"
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/pathfinder"
homepage = "https://github.com/servo/pathfinder"

[dependencies]
bitflags = "1.0"
byte-slice-cast = "0.3"
byteorder = "1.2"
crossbeam-channel = "0.4"
fxhash = "0.2"
half = "1.5"
hashbrown = "0.7"
log = "0.4"
rayon = "1.0"
serde = "1.0"
serde_json = "1.0"
smallvec = "1.2"
vec_map = "0.8"

[dependencies.instant]
version = "0.1"
features = ["wasm-bindgen"]

[dependencies.ss_pathfinder_color]
path = "../color"
version = "0.5"

[dependencies.ss_pathfinder_content]
path = "../content"
version = "0.5"

[dependencies.ss_pathfinder_geometry]
path = "../geometry"
version = "0.5"

[dependencies.ss_pathfinder_gpu]
path = "../gpu"
version = "0.5"

[dependencies.ss_pathfinder_resources]
path = "../resources"
version = "0.5"

[dependencies.ss_pathfinder_simd]
path = "../simd"
version = "0.5"

[dependencies.ss_pathfinder_ui]
path = "../ui"
version = "0.5"

[dev-dependencies]
quickcheck = "0.9"
